--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Agboola Michael Daramola",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.7.2"
+    "cypress": "^13.7.2",
+    "cypress-iframe": "^1.0.1"
   }
 }
